<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoeDetail.ShoeDetailViewModel" />
    </data>

    <!-- ConstraintLayout is used to constraint the views in a flat layout instead of nested layouts. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/name"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_shoe_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_text_view"
            app:layout_constraintTop_toTopOf="@id/name_text_view" />

        <TextView
            android:id="@+id/company_text_view"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/company"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/name_text_view"
            app:layout_constraintTop_toBottomOf="@id/name_text_view" />

        <EditText
            android:id="@+id/etCompany"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_company_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/company_text_view"
            app:layout_constraintTop_toTopOf="@id/company_text_view" />

        <TextView
            android:id="@+id/size_text_view"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/size"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/company_text_view"
            app:layout_constraintTop_toBottomOf="@id/company_text_view" />

        <EditText
            android:id="@+id/etSize"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_shoe_size"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/size_text_view"
            app:layout_constraintTop_toTopOf="@id/size_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/size_text_view"
            app:layout_constraintTop_toBottomOf="@id/size_text_view" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/description_text_view"
            app:layout_constraintTop_toTopOf="@id/description_text_view" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="@id/btnSave"
            app:layout_constraintTop_toBottomOf="@id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
